--- a/preview.colorlib.com/theme/instylr/single-blog.html
+++ b/preview.colorlib.com/theme/instylr/single-blog.html
@@ -101,30 +101,45 @@
             </div>
             <div class="blog-head">
               <div class="blog-tags">fashion, event, lifestyle</div>
-              <h2>Our fashion App</h2>
+              <h2>Are Jogger’s Athletic wear or Casual wear </h2>
             </div>
-            <p>Aenean quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-              justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum nec
-              nibh eu nisi rutrum iaculis. Pellentesque placerat sit amet leo in vestibulum. Suspendisse quam neque,
-              rutrum vel scelerisque eu.</p>
-            <p>Duis ultrices feugiat fringilla. Mauris nibh libero, interdum et lorem eget, maximus feugiat felis. Cras
-              vulputate mollis dolor. Quisque ultricies arcu a tellus pellentesque ultrices. Ut euismod luctus elit id
-              eleifend. Donec semper massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. Morbi auctor
-              lacus nec hendrerit consectetur. Phasellus neque erat, rhoncus in metus ut, ultrices tristique mi. Duis
-              eget eros est. Etiam a lorem eget diam bibendum venenatis sit amet sed mi. In nec suscipit nulla.
-              Pellentesque turpis neque, commodo nec leo vel, euismod consectetur magna. Vivamus tristique dignissim
-              lorem, eu finibus nisl mattis nec. Mauris congue sapien et pretium vehicula. </p>
+            <p>Jogger pants are typically worn during physical activities, such as exercising or participating in
+              sports. They are a good choice for activities that require a comfortable and stretchy fabric, as the
+              moisture-wicking material can help to keep the wearer cool and dry. Jogger pants for men are also a
+              popular choice for casual everyday wear, as they are comfortable and stylish.</p>
+
+            <p>They can be worn for a variety of occasions, such as running errands, hanging out with friends, or
+              relaxing at home. It is important to consider the dress code of the occasion when deciding whether to wear
+              jogger pants. In general, jogger pants are more suitable for casual or informal events, rather than formal
+              or professional occasions.</p>
+            <h4>Are They Athletic Wear Or Casual Wear?</h4> <br>
+
+            <p>Jogger pants can be worn for both athletic activities and casual occasions. They are typically made of a
+              moisture-wicking and stretchy fabric, such as polyester or spandex, which makes them suitable for physical
+              activities such as exercising or participating in sports. </p>
+            <p>Jogger pants are also a popular choice for casual everyday wear due to their comfort and style. They can
+              be paired with a t-shirt or sweatshirt and sneakers for a relaxed and casual look or dressed up with a
+              blouse and heels for a more formal occasion. Ultimately, it is up to the individual wearer to decide how
+              they want to style and wear their jogger pants. </p>
+
+            <h4> When Should You Wear Them ?</h4> <br>
+            <p>Jogger pants are typically worn during physical activities, such as exercising or participating in
+              sports. They are a good choice for activities that require a comfortable and stretchy fabric. Its
+              moisture-wicking material can help to keep the wearer cool and dry. Jogger pants are also a popular choice
+              for casual everyday wear, as they are comfortable and stylish.</p>
+            <p>Jogger pants are different from sweatpants for men. They can be worn for a variety of occasions, such as
+              running errands, hanging out with friends, or relaxing at home. It is important to consider the dress code
+              of the occasion when deciding whether to wear jogger pants. In general, jogger pants are more suitable for
+              casual or informal events, rather than formal or professional occasions.</p>
+
             <blockquote>
-              Phasellus neque erat, rhoncus in metus ut, ultrices tristique mi. Duis eget eros est. Etiam a lorem eget
-              diam bibendum venenatis sit amet sed mi. In nec sus-cipit nulla. Pellentesque turpis neque, commodo nec
-              leo vel.
+              Styling Tips - Jogger Pants For Men
             </blockquote>
-            <p>Quisque ultricies arcu a tellus pellentesque ultrices. Ut euismod luctus elit id eleifend. Donec semper
-              massa a imperdiet mattis. In vel mattis neque, nec ultricies lectus. Morbi auctor lacus nec hendrerit
-              consectetur. Phasellus neque erat, rhoncus in metus ut, ultrices tristique mi. Duis eget eros est. Etiam a
-              lorem eget diam bibendum venenatis sit amet sed mi. In nec suscipit nulla. Pellentesque turpis neque,
-              commodo nec leo vel, euismod consectetur magna. Vivamus tristique dignissim lorem, eu finibus nisl mattis
-              nec. Mauris congue sapien et pretium vehicula. </p>
+            <p>Jogger pants for men are quite ubiquitous and are worn very regularly. Sometimes men also choose unisex
+              jogger pants if they really like the design/pattern. </p>
+            <p> Choose the right fit: Jogger pants should be fitted at the waist and hips, with a tapered leg and
+              elasticized cuff. Avoid pants that are too loose or too tight, as they can be unflattering and
+              uncomfortable.</p>
           </div>
           <div class="blog-comments">
             <h3 class="bc-title">2 Comments</h3>
