--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -93,8 +93,10 @@
         <div class="container">
           <h2 style="color: black;">The ultimate guide to handbags</h2> <br>
           <h4 style="color: black;">What bag to choose and when to wear it</h4> <br>
-          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i
+              class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop the looks <i
+              class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
@@ -102,8 +104,10 @@
         <div class="container">
           <h2 style="color: black;">Men's capsule wardrobe</h2> <br>
           <h4 style="color: black;">A capsule wardrobe is a versatile, stylish and sustainable way to shop</h4> <br>
-          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop the looks <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i
+              class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop the looks <i
+              class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
@@ -112,8 +116,10 @@
           <h2 style="color: black;">How to reinvent your summer staples </h2> <br>
           <h4 style="color: black;">An extraordinary summer calls for a different approach to new season dressing.
             See how to make your old favorites feel on trend again,</h4> <br>
-          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i class="fa fa-angle-double-right"></i></a>
-          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop for looks <i class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Read the story <i
+              class="fa fa-angle-double-right"></i></a>
+          <a href="#" style="color: black; border: 1px solid black;" class="site-btn">Shop for looks <i
+              class="fa fa-angle-double-right"></i></a>
         </div>
 
       </div>
@@ -156,12 +162,12 @@
                 </div>
                 <div class="blog-head">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">Our fashion App</a></h2>
+                  <h2><a href="single-blog.html">Are Jogger’s Athletic wear or Casual wear Our fashion App</a></h2>
                 </div>
-                <p>Aenean quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse po-tenti. Donec congue
-                  vel justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa.
-                  Vestibulum nec nibh eu nisi rutrum iaculis. Pellentesque placerat sit amet leo in vestibulum.
-                  Suspendisse quam neque, rutrum vel scelerisque eu.</p>
+                <p>Jogger pants are typically worn during physical activities, such as exercising or participating in
+                  sports. They are a good choice for activities that require a comfortable and stretchy fabric, as the
+                  moisture-wicking material can help to keep the wearer cool and dry. Jogger pants for men are also a
+                  popular choice for casual everyday wear, as they are comfortable and stylish.</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -174,10 +180,12 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">New York Fashion Week</a></h2>
+                  <h2><a href="single-blog.html">Are Jogger’s Athletic wear or Casual wear </a></h2>
                 </div>
-                <p>Suspendisse potenti. Donec congue vel justo eget malesuada. In arcu justo, sagittis consequat
-                  pulvinar quis, pretium quis massa. Vestibulum nec nibh eu nisi rutrum iaculis.</p>
+                <p>Jogger pants are typically worn during physical activities, such as exercising or participating in
+                  sports. They are a good choice for activities that require a comfortable and stretchy fabric, as the
+                  moisture-wicking material can help to keep the wearer cool and dry. Jogger pants for men are also a
+                  popular choice for casual everyday wear, as they are comfortable and stylish.</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -190,11 +198,12 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">Summer 2019 Campaign</a></h2>
+                  <h2><a href="single-blog.html">The top Menswear trends winter 2022</a></h2>
                 </div>
-                <p>Quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-                  justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum
-                  nec nibh eu nisi rutrum iaculis.</p>
+                <p>42 majorly impactful outfits divided into three style categories. That is the basic setup for H&M
+                  Man’s seasonal lookbook release. The winter 2022 edition introduces the smart, casual, and street
+                  wardrobes in careful curation, offering instant inspiration and guidance on how to wear the new
+                  season’s fashion.</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -207,11 +216,12 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">New York Fashion Week</a></h2>
+                  <h2><a href="single-blog.html">Are Jogger’s Athletic wear or Casual wear </a></h2>
                 </div>
-                <p>Quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-                  justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum
-                  nec nibh eu nisi rutrum iaculis.</p>
+                <p>Jogger pants are typically worn during physical activities, such as exercising or participating in
+                  sports. They are a good choice for activities that require a comfortable and stretchy fabric, as the
+                  moisture-wicking material can help to keep the wearer cool and dry. Jogger pants for men are also a
+                  popular choice for casual everyday wear, as they are comfortable and stylish.</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -224,10 +234,12 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">Summer 2019 Campaign</a></h2>
+                  <h2><a href="single-blog.html">The top Menswear trends winter 2022</a></h2>
                 </div>
-                <p>Pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget malesuada. In
-                  arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum nec nibh eu nisi rutrum.
+                <p>42 majorly impactful outfits divided into three style categories. That is the basic setup for H&M
+                  Man’s seasonal lookbook release. The winter 2022 edition introduces the smart, casual, and street
+                  wardrobes in careful curation, offering instant inspiration and guidance on how to wear the new
+                  season’s fashion.
                 </p>
               </div>
             </div>
@@ -241,10 +253,12 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">New York Fashion Week</a></h2>
+                  <h2><a href="single-blog.html">Are Jogger’s Athletic wear or Casual wear </a></h2>
                 </div>
-                <p>Pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel justo eget malesuada. In
-                  arcu justo, sagittis consequat pulvinar quis, pretium quis massa. Vestibulum nec nibh eu nis.</p>
+                <p>Jogger pants are typically worn during physical activities, such as exercising or participating in
+                  sports. They are a good choice for activities that require a comfortable and stretchy fabric, as the
+                  moisture-wicking material can help to keep the wearer cool and dry. Jogger pants for men are also a
+                  popular choice for casual everyday wear, as they are comfortable and stylish.</p>
               </div>
             </div>
             <div class="col-md-6">
@@ -257,10 +271,12 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">Summer 2019 Campaign</a></h2>
+                  <h2><a href="single-blog.html">The top Menswear trends winter 2022</a></h2>
                 </div>
-                <p>Quis velit pulvinar, pellentesque neque vel, laoreet orci. Suspendisse potenti. Donec congue vel
-                  justo eget malesuada. In arcu justo, sagittis consequat pulvinar quis, pretium quis massa. </p>
+                <p>42 majorly impactful outfits divided into three style categories. That is the basic setup for H&M
+                  Man’s seasonal lookbook release. The winter 2022 edition introduces the smart, casual, and street
+                  wardrobes in careful curation, offering instant inspiration and guidance on how to wear the new
+                  season’s fashion.</p>
               </div>
             </div>
           </div>
