--- a/preview.colorlib.com/theme/instylr/blog.html
+++ b/preview.colorlib.com/theme/instylr/blog.html
@@ -198,7 +198,7 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">The top Menswear trends winter 2022</a></h2>
+                  <h2><a href="single-blog-2.html">The top Menswear trends winter 2022</a></h2>
                 </div>
                 <p>42 majorly impactful outfits divided into three style categories. That is the basic setup for H&M
                   Man’s seasonal lookbook release. The winter 2022 edition introduces the smart, casual, and street
@@ -234,7 +234,7 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">The top Menswear trends winter 2022</a></h2>
+                  <h2><a href="single-blog-2.html">The top Menswear trends winter 2022</a></h2>
                 </div>
                 <p>42 majorly impactful outfits divided into three style categories. That is the basic setup for H&M
                   Man’s seasonal lookbook release. The winter 2022 edition introduces the smart, casual, and street
@@ -271,7 +271,7 @@
                 </div>
                 <div class="blog-head bh-sm">
                   <div class="blog-tags">fashion, event, lifestyle</div>
-                  <h2><a href="single-blog.html">The top Menswear trends winter 2022</a></h2>
+                  <h2><a href="single-blog-2.html">The top Menswear trends winter 2022</a></h2>
                 </div>
                 <p>42 majorly impactful outfits divided into three style categories. That is the basic setup for H&M
                   Man’s seasonal lookbook release. The winter 2022 edition introduces the smart, casual, and street
