--- a/kitchen/dcloudkitchens.netlify.app/index.html
+++ b/kitchen/dcloudkitchens.netlify.app/index.html
@@ -3,7 +3,9 @@
 
 
 <!-- Mirrored from dcloudkitchens.netlify.app/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Feb 2023 15:18:06 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<!-- Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
 <head>
     <meta charset="utf-8" />
 
@@ -232,9 +234,8 @@
                         border-radius: 20px 0 !important
                     }
                 </style>
-                <h2 class="-mb5">Our Services</h2>
-                <p>Once you decide to open your brand with us, we ensure each verticle taken care of, on all aspects.
-                </p>
+                <h2 class="-mb5" style="text-align: center;">Our Services</h2>
+                <p style=" padding-left: 190px;">Once you decide to open your brand with us, we ensure each verticle taken care of, on all aspects.</p>
                 <div class="row" data-sf-element="Row" style="text-align: center">
                     <div id="Content_C145_Col00" data-aos="zoom-in-right" data-aos-duration="1000"
                         class="sf_colsIn col-3" data-sf-element="Column 1" data-placeholder-label="Column 1">
@@ -565,7 +566,8 @@
             <div id="Contact" class="sf_colsIn container" data-sf-element="Column 1" data-placeholder-label="Section">
                 <div class="row">
                     <div class="sf_colsIn col-6 -m-full" data-sf-element="Column 2">
-                        <div style="background-image: linear-gradient(to bottom,#ffffff 70%, var(--primary-pink)); border-radius: 5px; overflow: hidden; padding-bottom: 0px !important; margin-bottom: 0px;">
+                        <div
+                            style="background-image: linear-gradient(to bottom,#ffffff 70%, var(--primary-pink)); border-radius: 5px; overflow: hidden; padding-bottom: 0px !important; margin-bottom: 0px;">
                             <div id="map">
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3609.4442458569547!2d55.27906131493414!3d25.22195798388464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f42ed8748e289%3A0x7d86ed2d819cf802!2sLatifa%20Tower%20-%20Trade%20Centre%20-%20Trade%20Centre%201%20-%20Dubai%20-%20United%20Arab%20Emirates!5e0!3m2!1sen!2sin!4v1676303827898!5m2!1sen!2sin"
@@ -581,7 +583,9 @@
                                             href="tel:+97145778086">+97145778086</a></p>
                                 </div>
                             </div>
-                            <h4  style="padding: 15px 0px; text-align: center; position: relative; bottom: 0; left: 0; right: 0;">Need help? Call our
+                            <h4
+                                style="padding: 15px 0px; text-align: center; position: relative; bottom: 0; left: 0; right: 0;">
+                                Need help? Call our
                                 support team 24/7 at <a href="tel:+97145778086">+97145778086</a></h4>
                             <div>
 
@@ -984,7 +988,7 @@
     </script>
     <!-- GetButton.io widget -->
     <script type="text/javascript">
-        (function() {
+        (function () {
             var options = {
                 call: "+91 62008 57196", // Call phone number
                 call_color: "#129BF4", // Call button color
@@ -1001,7 +1005,7 @@
             s.type = 'text/javascript';
             s.async = true;
             s.src = url + '/widget-send-button/js/init.js';
-            s.onload = function() {
+            s.onload = function () {
                 WhWidgetSendButton.init(host, proto, options);
             };
             var x = document.getElementsByTagName('script')[0];
@@ -1013,4 +1017,5 @@
 
 
 <!-- Mirrored from dcloudkitchens.netlify.app/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 15 Feb 2023 15:18:33 GMT -->
+
 </html>
