--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 	<ul>
 		<li><a href="./fastkart/front-end/index.html">E-commerce</a></li>
+		<li><a href="./preview.colorlib.com/theme/instylr/index.html">Botique</a></li>
+		<li><a href="./kinder/index.html">Pre-school</a></li>
+		<li><a href="./nxtecs/index.html">Nxtecs</a></li>
+		
 	</ul>
 </body>
 </html>
