--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -204,6 +204,21 @@
         </section>
         <!-- hero-area end -->
 
+        <div class="container" style="padding-bottom: 70px; padding-top: 90px;">
+            <div class="row">
+                <div class="col-xl-6 col-lg-6">
+                    <div class="lg-btn1 lg-btn-03 text-center">
+                        <a class="c-btn" style="background-color: #002356; color: white;" href="course.html">Our Courses</a>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 ">
+                    <div class="lg-btn1 lg-btn-03 text-center">
+                        <a class="c-btn" style="background-color: #002356; color: white;" href="registration.html">Join Us</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- counter-area-start -->
         <div class="counter-area pb-20">
             <div class="container">
@@ -260,20 +275,7 @@
         </div>
         <!-- counter-area-end -->
 
-        <div class="container" style="padding-bottom: 60px;">
-            <div class="row">
-                <div class="col-xl-6 col-lg-6">
-                    <div class="lg-btn1 lg-btn-03 text-center">
-                        <a class="c-btn" style="background-color: #002356; color: white;" href="course.html">Our Courses</a>
-                    </div>
-                </div>
-                <div class="col-xl-6 col-lg-6 ">
-                    <div class="lg-btn1 lg-btn-03 text-center">
-                        <a class="c-btn" style="background-color: #002356; color: white;" href="registration.html">Join Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
 
 
 
