--- a/nxtecs/registration.html
+++ b/nxtecs/registration.html
@@ -39,7 +39,7 @@
             <div class="container">
                 <div class="row" style="display: flex; align-items: center; justify-content: center;">
 
-                    <div class="col-xl-6 col-lg-6 col-md-12">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                         <div class="about-wrapper1 mb-30" style="box-shadow: 0px 2px 0px; border-radius: 8px;">
                             <div class="section-title text-left mb-60">
 
@@ -47,8 +47,8 @@
                                     action="/action_page.php">
                                     <div class="container">
                                         <a href="index.html"><i class="fas fa-times"
-                                            style="color: BLACK; padding-left: 500PX;"></i></a>
-                                        <h3 style="color: #4688EB;">Register here</h3>
+                                            style="color: BLACK;"></i></a>
+                                       <!-- <h3 style="color: #4688EB;">Register here</h3> -->
 
                                         
 
@@ -82,7 +82,7 @@
                                         <div class="clearfix">
 
                                             <button type="submit" class="Confirmbtn"
-                                                style="border-radius: 30px; height: 40PX;">Log In</button>
+                                                style="border-radius: 30px; height: 40PX;">Register</button>
 
                                         </div>
                                         <p style="font-size: 11px;">By providing us with your details, We wont spam your
