--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -208,12 +208,12 @@
             <div class="row">
                 <div class="col-xl-6 col-lg-6">
                     <div class="lg-btn1 lg-btn-03 text-center">
-                        <a class="c-btn" style="background-color: #002356; color: white;" href="course.html">Our Courses</a>
+                        <a class="c-btn" style="background-color: #002356; height: 80px; color: white;" href="course.html">View all Our Courses</a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 ">
                     <div class="lg-btn1 lg-btn-03 text-center">
-                        <a class="c-btn" style="background-color: #002356; color: white;" href="registration.html">Join Us</a>
+                        <a class="c-btn" style="background-color: #002356; height: 80px; line-height: 20px; color: white;" href="registration.html">Get free career Counselling here</a>
                     </div>
                 </div>
             </div>
