--- a/fastkart/front-end/shop-left-sidebar.html
+++ b/fastkart/front-end/shop-left-sidebar.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Fastkart">
     <meta name="keywords" content="Fastkart">
     <meta name="author" content="Fastkart">
-    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+   <!-- <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon"> -->
     <title>Shop Left Sidebar</title>
 
     <!-- Google font -->
@@ -3854,7 +3854,7 @@
     <!-- Tap to top start -->
     <div class="theme-option">
         <div class="setting-box">
-            <button class="btn setting-button">
+           <!-- <button class="btn setting-button">
                 <i class="fa-solid fa-gear"></i>
             </button>
 
@@ -3896,7 +3896,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="back-to-top">
             <a id="back-to-top" href="#">
