--- a/fastkart/front-end/index.html
+++ b/fastkart/front-end/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Fastkart">
     <meta name="keywords" content="Fastkart">
     <meta name="author" content="Fastkart">
-    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+   <!-- <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon"> -->
     <title>On-demand last-mile delivery</title>
 
     <!-- Google font -->
@@ -4251,7 +4251,7 @@
     </div>
     <!-- Location Modal End -->
 
-    <!-- Cookie Bar Box Start -->
+    <!-- Cookie Bar Box Start 
     <div class="cookie-bar-box">
         <div class="cookie-box">
             <div class="cookie-image">
@@ -4268,7 +4268,7 @@
             <button class="btn privacy-button">Privacy Policy</button>
             <button class="btn ok-button">OK</button>
         </div>
-    </div>
+    </div> -->
     <!-- Cookie Bar Box End -->
 
     <!-- Deal Box Modal Start -->
@@ -4354,7 +4354,7 @@
     <!-- Tap to top start -->
     <div class="theme-option">
         <div class="setting-box">
-            <button class="btn setting-button">
+           <!-- <button class="btn setting-button">
                 <i class="fa-solid fa-gear"></i>
             </button>
 
@@ -4396,7 +4396,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="back-to-top">
             <a id="back-to-top" href="#">
