--- a/fastkart/front-end/index.html
+++ b/fastkart/front-end/index.html
@@ -184,13 +184,8 @@
                                         <span class="location-arrow">
                                             <i data-feather="map-pin"></i>
                                         </span>
-                                        <span class="locat-name">Your Location</span> &nbsp; &nbsp;
-                                        <svg class='fontawesomesvg' xmlns="http://www.w3.org/2000/svg" width="15"
-                                            height="15"
-                                            viewBox="0 0 448 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                            <path
-                                                d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                                        </svg>
+                                        <span class="locat-name">Your Location</span> &nbsp; 
+                                        <i class="fa fa-chevron-down"></i>
 
                                     </button>
                                 </div>
@@ -766,12 +761,7 @@
                                         <ul class="navbar-nav">
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
-                                                    data-bs-toggle="dropdown">Home <svg class='fontawesomesvg' xmlns="http://www.w3.org/2000/svg" width="15"
-                                                    height="15"
-                                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                                    <path
-                                                        d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                                                </svg></a> 
+                                                    data-bs-toggle="dropdown">Home <i class="fa fa-chevron-down"></i></a> 
                                                 
 
                                                 <ul class="dropdown-menu">
@@ -807,12 +797,7 @@
 
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
-                                                    data-bs-toggle="dropdown">Shop <svg class='fontawesomesvg' xmlns="http://www.w3.org/2000/svg" width="15"
-                                                    height="15"
-                                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                                    <path
-                                                        d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                                                </svg></a>
+                                                    data-bs-toggle="dropdown">Shop <i class="fa fa-chevron-down"></i></a>
 
                                                 <ul class="dropdown-menu">
                                                     <!--   <li>
@@ -846,12 +831,7 @@
 
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
-                                                    data-bs-toggle="dropdown">Product <svg class='fontawesomesvg' xmlns="http://www.w3.org/2000/svg" width="15"
-                                                    height="15"
-                                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                                    <path
-                                                        d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                                                </svg></a>
+                                                    data-bs-toggle="dropdown">Product <i class="fa fa-chevron-down"></i></a>
 
                                                 <ul class="dropdown-menu">
                                                     <!-- <li>
@@ -971,12 +951,7 @@
 
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
-                                                    data-bs-toggle="dropdown">Blog <svg class='fontawesomesvg' xmlns="http://www.w3.org/2000/svg" width="15"
-                                                    height="15"
-                                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                                    <path
-                                                        d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                                                </svg></a>
+                                                    data-bs-toggle="dropdown">Blog <i class="fa fa-chevron-down"></i></a>
                                                 <ul class="dropdown-menu">
                                                     <!-- <li>
                                                         <a class="dropdown-item" href="blog-detail.html">Blog Detail</a>
@@ -1090,12 +1065,7 @@
 
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link dropdown-toggle" href="javascript:void(0)"
-                                                    data-bs-toggle="dropdown">Seller <svg class='fontawesomesvg' xmlns="http://www.w3.org/2000/svg" width="15"
-                                                    height="15"
-                                                    viewBox="0 0 448 512"><!--! Font Awesome Free 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) Copyright 2022 Fonticons, Inc. -->
-                                                    <path
-                                                        d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
-                                                </svg></a>
+                                                    data-bs-toggle="dropdown">Seller <i class="fa fa-chevron-down"></i></a>
                                                 <ul class="dropdown-menu">
                                                     <!-- <li>
                                                         <a class="dropdown-item" href="seller-become.html">Become a
