--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -169,7 +169,53 @@
                 </div>
             </div>
         </section>
-        <!--page-title-area end-->
+        <!--page-title-area end--> 
+
+ <!-- brand-area-start -->
+ <div class="brand-area blue-soft-bg3 pb-65 pt-65">
+    <div class="container">
+        <div class="row brand-active">
+            <div class="col-xl-12 text-center" style="with 100%">
+                <div class="single-brand text-center">
+                  <!--  <img src="assets/img/brand/06.png" alt=""> -->
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sit!
+                  </p>
+                </div>
+            </div>
+            <div class="col-xl-12 text-center" style="with 100%">
+                <div class="single-brand text-center">
+                  <!--  <img src="assets/img/brand/06.png" alt=""> -->
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sit!
+                  </p>
+                </div>
+            </div>
+            <div class="col-xl-12 text-center" style="with 100%">
+                <div class="single-brand text-center">
+                  <!--  <img src="assets/img/brand/06.png" alt=""> -->
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, sit!
+                  </p>
+                </div>
+            </div>
+          <!--  <div class="col-xl-12 text-center"">
+                <div class="single-brand">
+                    <img src="assets/img/brand/09.png" alt="">
+                </div>
+            </div>
+            <div class="col-xl-12 text-center"">
+                <div class="single-brand">
+                    <img src="assets/img/brand/10.png" alt="">
+                </div>
+            </div>
+            <div class="col-xl-12 text-center"">
+                <div class="single-brand">
+                    <img src="assets/img/brand/06.png" alt="">
+                </div>
+            </div> -->
+        </div>
+    </div>
+</div>
+<!-- brand-area-end -->
+
 
         <!-- course-area-start -->
         <div class="course-area pt-130 pb-100">
@@ -235,7 +281,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -305,7 +351,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -375,7 +421,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -444,7 +490,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -514,7 +560,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -584,7 +630,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -654,7 +700,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -723,7 +769,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
@@ -793,7 +839,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">get enrolled <i
+                                <a class="c-btn mb-50" href="#">Consult us <i
                                         class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
