--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -213,7 +213,7 @@
                                 <div class="testimonial-text"
                                     style="display: block; justify-content: center; align-items: center; width: 100%; padding-left: 38%;">
                                     <h4></h4>
-                                    <h2 style="color: black;">Top Courses in demand</h2>
+                                    <h2 style="color: black;">Top Courses in demand-1</h2>
                                     <!-- <span style="font-size:16px;">
                                             Nxtech's AEM course helped me launch my career as a developer. We learned
                                             from experts, who were greatly dedicated to our placement. We were guided
@@ -238,7 +238,7 @@
                                 <div class="testimonial-text"
                                     style="display: block; justify-content: center; align-items: center; width: 100%; padding-left: 38%;">
                                     <h4></h4>
-                                    <h2 style="color: black;">Top Courses in demand</h2>
+                                    <h2 style="color: black;">Top Courses in demand-2</h2>
                                     <!-- <span style="font-size:16px;">
                                             Nxtech's AEM course helped me launch my career as a developer. We learned
                                             from experts, who were greatly dedicated to our placement. We were guided
@@ -253,7 +253,7 @@
                                     <br>
 
                                     <button type="submit" class="Confirmbtn"
-                                        style="border-radius: 5px; height: 40PX; width: 150px; margin-left: 27%; ">Register</button>
+                                        style="border-radius: 5px; height: 40PX; width: 150px; margin-left: 23%; ">Know more</button>
 
 
 
