--- a/nxtecs/course.html
+++ b/nxtecs/course.html
@@ -408,7 +408,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -477,7 +477,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -545,7 +545,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -614,7 +614,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -683,7 +683,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -752,7 +752,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -821,7 +821,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
@@ -890,7 +890,7 @@
                                 </div>
                                 <p>Sed ut perspiciatis unde omnis iste natus
                                     error sit voluptatem accusantium dolorque laudantium totam rem aperiam</p>
-                                <a class="c-btn mb-50" href="#">Consult us <i class="far fa-arrow-right"></i></a>
+                                <a class="c-btn mb-50" href="course-consult.html">Consult us <i class="far fa-arrow-right"></i></a>
                                 <div class="course-meta">
                                     <span><i class="far fa-users"></i> <a href="#">25</a></span>
                                     <span><i class="far fa-book"></i> <a href="#">36hr</a></span>
