--- a/nxtecs/index.html
+++ b/nxtecs/index.html
@@ -542,10 +542,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/architect.jpg" alt=""></a>
+                                <a href="aem-architect.html"><img src="assets/img/course/architect.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="job.html">AEM Architects</a></h4>
+                                <h4 class="text_align"><a href="aem-architect.html">AEM Architects</a></h4>
 
                             </div>
                         </div>
@@ -553,10 +553,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/developer.jpg" alt=""></a>
+                                <a href="aem-developer.html"><img src="assets/img/course/developer.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="job.html">AEM Developer </a></h4>
+                                <h4 class="text_align"><a href="aem-developer.html">AEM Developer </a></h4>
 
                             </div>
                         </div>
@@ -564,10 +564,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/manager.jpg" alt=""></a>
+                                <a href="aem manager.html"><img src="assets/img/course/manager.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="job.html">AEM manager</a></h4>
+                                <h4 class="text_align"><a href="aem manager.html">AEM manager</a></h4>
 
                             </div>
                         </div>
@@ -575,10 +575,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/fullstack.jpg" alt=""></a>
+                                <a href="aem-fullstack.html"><img src="assets/img/course/fullstack.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="job.html">AEM Full stack developers</a></h4>
+                                <h4 class="text_align"><a href="aem-fullstack.html">AEM Full stack developers</a></h4>
 
                             </div>
                         </div>
@@ -586,10 +586,10 @@
                     <div class="col-xl-4 col-lg-4 col-md-6">
                         <div class="course-cat-wrapper mb-30">
                             <div class="course-cat-img">
-                                <a href="job.html"><img src="assets/img/course/qa.jpg" alt=""></a>
+                                <a href="aem-qa.html"><img src="assets/img/course/qa.jpg" alt=""></a>
                             </div>
                             <div class="course-cat-text">
-                                <h4 class="text_align"><a href="job.html">AEM QA senior consultant</a></h4>
+                                <h4 class="text_align"><a href="aem-qa.html">AEM QA senior consultant</a></h4>
 
                             </div>
                         </div>
